# web-server-rust

./: .env.example  Cargo.toml
migrations/2025-12-04-084318-0000_create_articles/: down.sql  up.sql
migrations/2025-12-04-112804-0000_create_users/: down.sql  up.sql
src/: db.rs  main.rs  schema.rs
src/application/articles/: create_use_case.rs  delete_use_case.rs  index_use_case.rs  mod.rs  patch_use_case.rs  put_use_case.rs  view_use_case.rs
src/components/: db.rs  password.rs  token.rs
src/controllers/: articles.rs  auth.rs
src/entities/: article.rs  user.rs
src/infrastructure/: mod.rs  resources.rs
src/infrastructure/articles/: create_controller.rs  delete_controller.rs  index_controller.rs  mod.rs  patch_controller.rs  put_controller.rs  view_controller.rs
src/middleware/: jwt_middleware.rs
src/use_cases/: articles.rs  auth.rs
