[package]
name = "rust-web"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
diesel = { version = "2.2.0", features = ["postgres"] }
# build libpq and openssl as part of the build process
# uncomment these lines if you run into setup issues
# pq-sys = { version = "0.6", features = ["bundled"] }
# openssl-sys = { version = "0.9.100", features = ["vendored"] }
dotenvy = "0.15"
argon2 = "0.5.3"
rand = { version = "0.8", features = ["std_rng"] }
jwt = "0.16.0"
hmac = "0.12.1"
sha2 = "0.10.9"
futures-util = "0.3.31"
